# jobradar

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
Design/: requirements.md  skills.md  tasks.md
data/: seen_jobs.json  workday_baseline.json
jobradar/: __init__.py  __main__.py
jobradar/api/: __init__.py  app.py  auth.py  db.py  events.py  imap_poller.py  jobs_service.py  recorder.py  schemas.py
jobradar/api/routes/: account.py  auth.py  email.py  jobs.py
jobradar/config/: __init__.py  loader.py
jobradar/connectors/: adzuna.py  ashby.py  atlassian.py  base.py  builtin.py  company_careers.py  email_alerts.py  govt_careers.py  gradconnection.py  greenhouse.py  indeed.py  jora.py  lever.py  linkedin.py  prosple.py  seek.py  smartrecruiters.py  workday.py
jobradar/core/: dedupe.py  description_fetcher.py  email_sender.py  filters.py  models.py  normalize.py  output.py  recruiter.py  resume_parser.py  resume_scorer.py  visa_scoring.py
